unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Manager_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Manager_Due_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Manager Due Date</label>
    <type>Date</type>
</CustomField>