unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Medical_Re_Max__c.field-meta.xml
<CustomField>
    <fullName>Medical_Re_Max__c</fullName>
    <label>Medical Re Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>