unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Obtain_TASC_ID__c.field-meta.xml
<CustomField>
    <fullName>Obtain_TASC_ID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Obtain TASC ID</label>
    <type>Checkbox</type>
</CustomField>