unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Old_Additional_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Old_Additional_Contacts__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Old Additional Contacts</label>
    <length>250</length>
    <type>Text</type>
</CustomField>