unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Old_Agency_Rep__c.field-meta.xml
<CustomField>
    <fullName>Old_Agency_Rep__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Old Agency Rep</label>
    <length>100</length>
    <type>Text</type>
</CustomField>