unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Old_Broker_Broker_Contact__c.field-meta.xml
<CustomField>
    <fullName>Old_Broker_Broker_Contact__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Reflects Broker, Broker contact, and Broker phone number</inlineHelpText>
    <label>Old Broker/Broker Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>