unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Old_Decision_Maker_Contact__c.field-meta.xml
<CustomField>
    <fullName>Old_Decision_Maker_Contact__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Old Decision Maker Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>