unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Old_Group_Enrollment_Contact__c.field-meta.xml
<CustomField>
    <fullName>Old_Group_Enrollment_Contact__c</fullName>
    <description>Group contact for Enrollment</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Group contact for Enrollment Planning</inlineHelpText>
    <label>Old Group Enrollment Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>