unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Other_Carrier_File_Layouts__c.field-meta.xml
<CustomField>
    <fullName>Other_Carrier_File_Layouts__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Collect file examples for other carriers as needed and provide to Enrollment Services</inlineHelpText>
    <label>Other Carrier File Layouts</label>
    <type>Checkbox</type>
</CustomField>