unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Other_Life_Disability_Carriers__c.field-meta.xml
<CustomField>
    <fullName>Other_Life_Disability_Carriers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other Life &amp; Disability Carriers</label>
    <type>Checkbox</type>
</CustomField>