unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Other_Life_Disability_Date__c.field-meta.xml
<CustomField>
    <fullName>Other_Life_Disability_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Life &amp; Disability Date</label>
    <type>Date</type>
</CustomField>