unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Other_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Other_Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other Vendor</label>
    <type>Checkbox</type>
</CustomField>