unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Override_City_State_Zip__c.field-meta.xml
<CustomField>
    <fullName>Override_City_State_Zip__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If something is entered it over rides the Master Group City State</inlineHelpText>
    <label>Override City/State/Zip</label>
    <length>60</length>
    <type>Text</type>
</CustomField>