unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Override_Street__c.field-meta.xml
<CustomField>
    <fullName>Override_Street__c</fullName>
    <description>If the Master Group Street is not where en-rollers need to go, you can override the street address by keying here</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Used to override the Master Group Street if the place en-rollers need to go is different</inlineHelpText>
    <label>Override Street</label>
    <length>50</length>
    <type>Text</type>
</CustomField>