unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Payroll_Changes_Date__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Changes_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Last Date for Payroll Changes</inlineHelpText>
    <label>Payroll Changes Date</label>
    <type>Date</type>
</CustomField>