unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Payroll_Contact__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payroll Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Enrollment Implementations (Payroll Contact)</relationshipLabel>
    <relationshipName>Enrollment_Implementations3</relationshipName>
    <type>Lookup</type>
</CustomField>