unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Payroll_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Contact_Email__c</fullName>
    <formula>Payroll_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payroll Contact Email</label>
    <type>Text</type>
</CustomField>