unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Payroll_Contact_Fax__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Contact_Fax__c</fullName>
    <formula>Payroll_Contact__r.Fax</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payroll Contact Fax</label>
    <type>Text</type>
</CustomField>