unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Payroll_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Contact_Phone__c</fullName>
    <formula>Payroll_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payroll Contact Phone</label>
    <type>Text</type>
</CustomField>