unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Payroll_Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Contact_Title__c</fullName>
    <formula>Payroll_Contact__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payroll Contact Title</label>
    <type>Text</type>
</CustomField>