unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Payroll_Load__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Load__c</fullName>
    <label>Payroll Load</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Upload</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>