unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Payroll_Load_Date__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Load_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payroll Load Date</label>
    <type>Date</type>
</CustomField>