unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Payroll_Loaded__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Loaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payroll Loaded</label>
    <type>Checkbox</type>
</CustomField>