unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Payroll_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Vendor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payroll Vendor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>