unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Payroll_Vendor_Contact__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Vendor_Contact__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payroll Vendor Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>