unpackaged/main/default/objects/Enrollment_Implementation__c/fields/PCCR_Post_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>PCCR_Post_Enrollment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PCCR Post Enrollment</label>
    <type>Checkbox</type>
</CustomField>