unpackaged/main/default/objects/Enrollment_Implementation__c/fields/PCCR_Post_Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>PCCR_Post_Enrollment_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PCCR Post Enrollment Date</label>
    <type>Date</type>
</CustomField>