unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Peer_Corrections_Completed__c.field-meta.xml
<CustomField>
    <fullName>Peer_Corrections_Completed__c</fullName>
    <label>Peer Corrections Completed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>