unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Peer_Review_Comments__c.field-meta.xml
<CustomField>
    <fullName>Peer_Review_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Peer Review Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>