unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Peer_Review_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Peer_Review_Completion_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Peer Review Completion Date</label>
    <type>Date</type>
</CustomField>