unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Peer_Reviewer_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Peer_Reviewer_Due_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Peer Reviewer Due Date</label>
    <type>Date</type>
</CustomField>