unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Phone_System_Setup__c.field-meta.xml
<CustomField>
    <fullName>Phone_System_Setup__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Submit ticket for use of USAble Phone system if applicable and set enrollers up</inlineHelpText>
    <label>Phone System Setup</label>
    <type>Checkbox</type>
</CustomField>