unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Plan_Finalization__c.field-meta.xml
<CustomField>
    <fullName>Plan_Finalization__c</fullName>
    <label>Plan Finalization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>