unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Plan_Month_Day_Year__c.field-meta.xml
<CustomField>
    <fullName>Plan_Month_Day_Year__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plan Month/Day/Year</label>
    <type>Date</type>
</CustomField>