unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Post_Enrollment_Comments__c.field-meta.xml
<CustomField>
    <fullName>Post_Enrollment_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Post Enrollment Comments</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>