unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Prior_Carrier_Info__c.field-meta.xml
<CustomField>
    <fullName>Prior_Carrier_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prior Carrier Info</label>
    <type>Checkbox</type>
</CustomField>