unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Prior_Carrier_Info_Received__c.field-meta.xml
<CustomField>
    <fullName>Prior_Carrier_Info_Received__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Prior Carrier Info Received</label>
    <type>Date</type>
</CustomField>