unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Prior_Carrier_Products__c.field-meta.xml
<CustomField>
    <fullName>Prior_Carrier_Products__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Prior Carrier Products</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>