unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Product_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Product_Instructions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Instructions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>