unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proposal</label>
    <type>Checkbox</type>
</CustomField>