unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Proposal_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Received_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Proposal Received Date</label>
    <type>Date</type>
</CustomField>