unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Recon_Received__c.field-meta.xml
<CustomField>
    <fullName>Recon_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recon Received</label>
    <type>Checkbox</type>
</CustomField>