unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Recon_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Recon_Received_Date__c</fullName>
    <description>Date Payroll  Reconciled</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Recon Received Date</label>
    <type>Date</type>
</CustomField>