unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Recon_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Recon_Resolved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recon Resolved</label>
    <type>Checkbox</type>
</CustomField>