unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Recon_Resolved_Date__c.field-meta.xml
<CustomField>
    <fullName>Recon_Resolved_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Recon Resolved Date</label>
    <type>Date</type>
</CustomField>