unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Recon_Worked__c.field-meta.xml
<CustomField>
    <fullName>Recon_Worked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recon Worked</label>
    <type>Checkbox</type>
</CustomField>