unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Reconcile_TASC_Elections__c.field-meta.xml
<CustomField>
    <fullName>Reconcile_TASC_Elections__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reconcile TASC Elections</label>
    <type>Checkbox</type>
</CustomField>