unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Renew_Flex_Plan__c.field-meta.xml
<CustomField>
    <fullName>Renew_Flex_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renew Flex Plan</label>
    <type>Checkbox</type>
</CustomField>