unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Renewals_for_Products__c.field-meta.xml
<CustomField>
    <fullName>Renewals_for_Products__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renewals for Products</label>
    <type>Checkbox</type>
</CustomField>