unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Rep_Test_Case__c.field-meta.xml
<CustomField>
    <fullName>Rep_Test_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rep Test Case</label>
    <type>Checkbox</type>
</CustomField>