unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Review_Group_before_OE__c.field-meta.xml
<CustomField>
    <fullName>Review_Group_before_OE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Review Group before OE</label>
    <type>Checkbox</type>
</CustomField>