unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Rollover__c.field-meta.xml
<CustomField>
    <fullName>Rollover__c</fullName>
    <label>Rollover</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>