unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Run_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Run_Out_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Run Out Date</label>
    <type>Date</type>
</CustomField>