unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Run_Out_Period_Days__c.field-meta.xml
<CustomField>
    <fullName>Run_Out_Period_Days__c</fullName>
    <label>Run Out Period Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>