unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Sales Rep that brought the case to the TSM if different than TSM.  Basically who can answer questions on the actual sale conversation</inlineHelpText>
    <label>Sales Rep</label>
    <length>50</length>
    <type>Text</type>
</CustomField>