unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Same_Sex_Marriage__c.field-meta.xml
<CustomField>
    <fullName>Same_Sex_Marriage__c</fullName>
    <label>Same Sex Marriage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>