unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Schedule_Payroll_Load_Date__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Payroll_Load_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Scheduled Payroll Load Date</label>
    <type>Date</type>
</CustomField>