unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Scrub_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Scrub_Completion_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Scrub Completion Date</label>
    <type>Date</type>
</CustomField>