unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Scrub_Required__c.field-meta.xml
<CustomField>
    <fullName>Scrub_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scrub Required</label>
    <type>Checkbox</type>
</CustomField>