unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Section_125_Type__c.field-meta.xml
<CustomField>
    <fullName>Section_125_Type__c</fullName>
    <label>Section 125 Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Pop</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>