unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Short_Plan_Year__c.field-meta.xml
<CustomField>
    <fullName>Short_Plan_Year__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Short Plan Year</label>
    <length>50</length>
    <type>Text</type>
</CustomField>