unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Skip_Months_Notes__c.field-meta.xml
<CustomField>
    <fullName>Skip_Months_Notes__c</fullName>
    <description>Used for entering notes when skip months have multiple billing modes</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Used for entering notes when skip months have multiple billing modes</inlineHelpText>
    <label>Skip Months Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>