unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Special_Commission_Notes__c.field-meta.xml
<CustomField>
    <fullName>Special_Commission_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Used for PCCR Commission notes</inlineHelpText>
    <label>Special Commission Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>