unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <formula>IF ( ISNULL(Override_Street__c) ||  ISBLANK(Override_Street__c) , Case__r.Master_Group__r.BillingStreet, Override_Street__c)</formula>
    <label>Street</label>
    <type>Text</type>
</CustomField>