unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Sub_Cost__c.field-meta.xml
<CustomField>
    <fullName>Sub_Cost__c</fullName>
    <label>Sub Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>