unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Sub_Days__c.field-meta.xml
<CustomField>
    <fullName>Sub_Days__c</fullName>
    <label>Sub Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>