unpackaged/main/default/objects/Enrollment_Implementation__c/fields/TASC_Flex__c.field-meta.xml
<CustomField>
    <fullName>TASC_Flex__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TASC/Flex</label>
    <type>Checkbox</type>
</CustomField>