unpackaged/main/default/objects/Enrollment_Implementation__c/fields/TASC_Flex_Post_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>TASC_Flex_Post_Enrollment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TASC/Flex Post Enrollment</label>
    <type>Checkbox</type>
</CustomField>