unpackaged/main/default/objects/Enrollment_Implementation__c/fields/TASC_Post_Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>TASC_Post_Enrollment_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TASC Post Enrollment Date</label>
    <type>Date</type>
</CustomField>