unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Technology_Credit__c.field-meta.xml
<CustomField>
    <fullName>Technology_Credit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Any groups where the broker should be set up with this commission type.</description>
    <label>4% Technology Credit</label>
    <type>Checkbox</type>
</CustomField>