unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Territory_Sales_Manager_TSM__c.field-meta.xml
<CustomField>
    <fullName>Territory_Sales_Manager_TSM__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Territory Sales Manager (TSM)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>