unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Testing_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Testing_Release_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Testing Release Date</label>
    <type>Date</type>
</CustomField>