unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Third_Party__c.field-meta.xml
<CustomField>
    <fullName>Third_Party__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Third Party</label>
    <length>50</length>
    <type>Text</type>
</CustomField>