unpackaged/main/default/objects/Enrollment_Implementation__c/fields/USAble_Life_Products__c.field-meta.xml
<CustomField>
    <fullName>USAble_Life_Products__c</fullName>
    <defaultValue>false</defaultValue>
    <label>USAble Life Products</label>
    <type>Checkbox</type>
</CustomField>