unpackaged/main/default/objects/Enrollment_Implementation__c/fields/USAble_Region__c.field-meta.xml
<CustomField>
    <fullName>USAble_Region__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>USAble Region</label>
    <length>50</length>
    <type>Text</type>
</CustomField>