unpackaged/main/default/objects/Enrollment_Implementation__c/fields/USAL_Post_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>USAL_Post_Enrollment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>USAL Post Enrollment</label>
    <type>Checkbox</type>
</CustomField>