unpackaged/main/default/objects/Enrollment_Implementation__c/fields/USAL_Post_Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>USAL_Post_Enrollment_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>USAL Post Enrollment Date</label>
    <type>Date</type>
</CustomField>