unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Vision__c.field-meta.xml
<CustomField>
    <fullName>Vision__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>