unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Vision_Post_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Vision_Post_Enrollment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vision Post Enrollment</label>
    <type>Checkbox</type>
</CustomField>