unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Vison_Post_Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>Vison_Post_Enrollment_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vison Post Enrollment Date</label>
    <type>Date</type>
</CustomField>