unpackaged/main/default/objects/Enrollment_Implementation__c/validationRules/OnlyOneEnrollmentImplementation.validationRule-meta.xml
<ValidationRule>
    <fullName>OnlyOneEnrollmentImplementation</fullName>
    <active>true</active>
    <description>This validation validates that not more than one Enrollment Implementation record can be created on a case</description>
    <errorConditionFormula>AND(
Case__r.Enrollment_Implementation_Count__c = 1,
ISNEW()
)</errorConditionFormula>
    <errorMessage>The case currently has a Enrollment Implementation record, please navigate to the existing record and select edit</errorMessage>
</ValidationRule>